# sample-aca-fastapi-extid

./: .gitignore  README.md  config.json.example  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: azure-dev.yaml  python-check.yaml
cli/: config.py  main.py
infra/: api.bicep  main.bicep  main.parameters.json
src/: requirements.txt
