[project]
name = "sample-aca-fastapi-extid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
"pytest","httpx",
"coverage",
"pytest-cov",
"pre-commit"
]

[tool.black]
line-length = 120
target-version = ["py311"]
src = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-ra --cov=src"
testpaths = [
    "src/api/",
    "src/gunicorn_test.py"
]
pythonpath = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
